After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 729864 - goaalarm: small memory leak fix
goaalarm: small memory leak fix
Status: RESOLVED FIXED
Product: gnome-online-accounts
Classification: Core
Component: Kerberos
unspecified
Other All
: Normal normal
: ---
Assigned To: GNOME Online Accounts maintainer(s)
GNOME Online Accounts maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2014-05-09 11:16 UTC by Ray Strode [halfline]
Modified: 2014-05-09 12:14 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
goaalarm: small memory leak fix (3.19 KB, patch)
2014-05-09 11:16 UTC, Ray Strode [halfline]
committed Details | Review

Description Ray Strode [halfline] 2014-05-09 11:16:39 UTC
I was looking through a valgrind log and noticed this:

==30104==
==30104== 40 bytes in 1 blocks are possibly lost in loss record 1,472 of
2,959
==30104==    at 0x4C2845D: malloc (in /usr/lib64/valgrind/vgpreload_memcheck-amd64-linux.so)
==30104==    by 0xB6BD996: standard_malloc (gmem.c:85)
==30104==    by 0xB6BDAAC: g_malloc (gmem.c:159)
==30104==    by 0xB6DA0CE: g_slice_alloc (gslice.c:1003)
==30104==    by 0xB71295A: g_rec_mutex_impl_new (gthread-posix.c:271)
==30104==    by 0xB712AA8: g_rec_mutex_init (gthread-posix.c:339)
==30104==    by 0x41B7C6: goa_alarm_init (goaalarm.c:174)
==30104==    by 0xB4332B7: g_type_create_instance (gtype.c:1917)
==30104==    by 0xB416A5D: g_object_constructor (gobject.c:1855)
==30104==    by 0xB416149: g_object_newv (gobject.c:1719)
==30104==    by 0xB4169B2: g_object_new_valist (gobject.c:1836)
==30104==    by 0xB415AB8: g_object_new (gobject.c:1551)

This commit adds the missing g_rec_mutex_clear call.
Comment 1 Ray Strode [halfline] 2014-05-09 11:16:41 UTC
Created attachment 276232 [details] [review]
goaalarm: small memory leak fix
Comment 2 Debarshi Ray 2014-05-09 11:43:34 UTC
Review of attachment 276232 [details] [review]:

Thanks for the patch, Ray! Looks good to me.
Comment 3 Ray Strode [halfline] 2014-05-09 11:59:40 UTC
Attachment 276232 [details] pushed as 51caec0 - goaalarm: small memory leak fix
Comment 4 Debarshi Ray 2014-05-09 12:14:13 UTC
Cherry-picked to gnome-3-12 and gnome-3-10 (because latest Fedora is officially shipping GNOME 3.10.x)