goaalarm: small memory leak fix

I was looking through a valgrind log and noticed this:

==30104==
==30104== 40 bytes in 1 blocks are possibly lost in loss record 1,472 of
2,959
==30104==    at 0x4C2845D: malloc (in /usr/lib64/valgrind/vgpreload_memcheck-amd64-linux.so)
==30104==    by 0xB6BD996: standard_malloc (gmem.c:85)
==30104==    by 0xB6BDAAC: g_malloc (gmem.c:159)
==30104==    by 0xB6DA0CE: g_slice_alloc (gslice.c:1003)
==30104==    by 0xB71295A: g_rec_mutex_impl_new (gthread-posix.c:271)
==30104==    by 0xB712AA8: g_rec_mutex_init (gthread-posix.c:339)
==30104==    by 0x41B7C6: goa_alarm_init (goaalarm.c:174)
==30104==    by 0xB4332B7: g_type_create_instance (gtype.c:1917)
==30104==    by 0xB416A5D: g_object_constructor (gobject.c:1855)
==30104==    by 0xB416149: g_object_newv (gobject.c:1719)
==30104==    by 0xB4169B2: g_object_new_valist (gobject.c:1836)
==30104==    by 0xB415AB8: g_object_new (gobject.c:1551)

This commit adds the missing g_rec_mutex_clear call.

https://bugzilla.gnome.org/show_bug.cgi?id=729864